add two new images, create classes for li, ul, and h2

--- a/band-page.html
+++ b/band-page.html
@@ -7,10 +7,19 @@
 </head>
 
 <body>
-<h1 class="header">Masayoshi Takanaka</h1>
+<h1 class="header">MASAYOSHI TAKANAKA</h1>
 <img src="img/air.jpeg" alt="a guitarist playing guitar in the air">
 <img src="img/images.jpeg" alt="a person sitting on the beach with the name 'takanaka' spelled in front of them">
 <img src="img/surf.jpeg" alt="a man playing a red surf board shaped guitar">
+<img src="img/guitar.jpeg" alt="a man standing in front of a chalkboard smiling. Musical notes are hand drawn on the chalkboard.">
+<img src="img/teal.jpeg" alt="a picture of takanaka">
+<img src="img/rainbow.jpeg" alt="a man playing guitar in a rainbow gown">
+
+
+<h2 class="header2">TOUR DATES</h2>
+<u1 class="list">
+  <li class="list">Fukuoka Congress Center - 10/23/22</li>
+</u1>
 
 </body>
 
