--- a/band-page.html
+++ b/band-page.html
@@ -19,7 +19,10 @@
 <h2 class="header2">TOUR DATES</h2>
 <u1 class="list">
   <li class="list">Fukuoka Congress Center - 10/23/22</li>
+  <li class="list">Zepp Nagoya, Japan - 10/30/22</li>
+  <li class="list">Osaka Castle Band Shell - 11/06/22</li>
 </u1>
+</body>
 
 </body>
 
